syntax="proto3";

package userApp;

option go_package = "./userApp";

message RequestUserID {
    string user_id = 1;
}

message Empty {}

message ResponseListUsers {
    repeated ResponseUser users = 1;
}

message ResponseUser {
    string email = 1;
    string password = 2;
}

service UserService {
    rpc GetUserProfileIDs (RequestUserID) returns (ResponseUser){}
    rpc GetListUser (Empty) returns (ResponseListUsers){}
}